--- a/packages/ayano-script/template/index.html
+++ b/packages/ayano-script/template/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ayano app</title>
   <script src="https://cdn.bootcss.com/react/15.6.1/react.js" charset="utf-8"></script>
   <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js" charset="utf-8"></script>
 </head>
 <body>
-<div class="root"></div>
+<div id="root"></div>
   <script src="/dist/main.js" charset="utf-8"></script>
 </body>
 </html>
