--- a/packages/ayano-script/template/index.html
+++ b/packages/ayano-script/template/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <div id="root"></div>
-  <script src="/dist/main.js" charset="utf-8"></script>
+  <script src="/main.js" charset="utf-8"></script>
 </body>
 </html>
